--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,11 @@ env:
 
 install:
   - pip3 install -r requirements.txt
+  - pip3 install coveralls
 
 script:
   - cd Foodezz
   - python manage.py test
+
+after_success:
+  coveralls
